--- a/index.html
+++ b/index.html
@@ -153,10 +153,7 @@
           </div>
           <div class="row align-center">
             <img src="images/red-check.svg" alt="red-check" />
-            <p>
-              We will only switch you to energy companies that we trust and will
-              treat you right
-            </p>
+            <p>We will only switch you to energy companies that we trust and will treat you right</p>
           </div>
           <div class="row align-center">
             <img src="images/blue-check.svg" alt="blue-check" />
