--- a/index.html
+++ b/index.html
@@ -47,14 +47,13 @@
       </nav>
       <!-- first section -->
       <section class="row row-centered section1 gap">
-        <!-- text container -->
         <div class="text-container font-fam bold">
           <h1 class="text-color">Work at the speed of thought</h1>
           <p class="first-section-paragraph">
             Tools, tutorials, design and innovation experts, all in one place!
             The most intuitive way to imagine your next user experience.
           </p>
-          <div class="buttons-container row row-centered">
+          <div class="buttons-container row-centered ">
             <button class="buttons green-button font-fam medium-text semi-bold">
               Get started
             </button>
@@ -62,7 +61,7 @@
               class="buttons watch-the-video font-fam medium-text semi-bold">
               <img src="images/play-button.svg" alt="play the video" />
               Watch the Video
-              <video width="400" height="360" controls loop>
+              <video width="300" height="360" controls loop>
                 <source src="video/People.mp4" type="video/mp4">
               </video>
             </button>
@@ -112,7 +111,7 @@
       </section>
 
       <!-- Third section -->
-      <section class="section3 row row-centered gap">
+      <section class="section3 row-centered gap">
         <div class="text-container font-fam text-color">
           <h5 class="medium-text semi-bold">Effortless Validation for</h5>
           <h2 class="bold subtitle">Management</h2>
@@ -148,15 +147,15 @@
             traits, personal choices and the overall personality of the person.
           </p>
           <div class="row align-center">
-            <img src="images/orange-check.svg" alt="orange-check" />
+            <img src="images/yellow check.png" alt="yellow check" />
             <p>Never worry about overpaying for your energy again.</p>
           </div>
           <div class="row align-center">
-            <img src="images/red-check.svg" alt="red-check" />
+            <img src="images/red check.png" alt="red-check" />
             <p>We will only switch you to energy companies that we trust and will treat you right</p>
           </div>
           <div class="row align-center">
-            <img src="images/blue-check.svg" alt="blue-check" />
+            <img src="images/green check.png" alt="green-check" />
             <p>We track the markets daily and know where the savings are.</p>
           </div>
         </div>
